--- a/src/css/NavWrapper.scss
+++ b/src/css/NavWrapper.scss
@@ -12,9 +12,12 @@
 
 .logo {
   height: 32px;
-  /* background: rgba(255,255,255,.2); */
   margin: 16px 0;
   color: #fff;
+}
+
+.header-logo {
+  font-size: 20px;
 }
 
 .ant-menu.custom-banner.ant-menu-dark li,
