--- a/src/css/Video.scss
+++ b/src/css/Video.scss
@@ -5,10 +5,14 @@
 }
 
 .custom-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.video-details {
+  margin-top: 20px;
 }
