Add video details

--- a/src/css/NavWrapper.scss
+++ b/src/css/NavWrapper.scss
@@ -20,6 +20,10 @@
   font-size: 20px;
 }
 
+.side-nav-link {
+  color: rgba(255, 255, 255, 0.65);
+}
+
 .ant-menu.custom-banner.ant-menu-dark li,
 .ant-menu.custom-banner .ant-menu-item i.anticon {
   font-size: 20px;
