--- a/src/css/NavWrapper.scss
+++ b/src/css/NavWrapper.scss
@@ -20,6 +20,11 @@
   font-size: 20px;
 }
 
+.nav-avatar {
+  float: right;
+  margin-right: 20px;
+}
+
 .side-nav-link {
   color: rgba(255, 255, 255, 0.65);
 }
